objects/Elisa2__c.object
<CustomObject>
    <fields>
        <fullName>R_Number_CustomObject__c</fullName>
        <label>R Number CustomObject</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text_R_CustomObject__c</fullName>
        <label>Text R CustomObject Layout</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email_test__c</fullName>
        <label>email test</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>test_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>test check</label>
        <type>Checkbox</type>
    </fields>
    <label>Elisa2</label>
    <nameField>
        <label>Elisa2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Elisa2</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>